  * Do not try and update /etc/mtab when it's a symbolic link.  LP: #529993.
  * Remove odd -a option from mount calls, probably a C&P error from the
    fsck code long ago.  LP: #537135.
  * Wait for Upstart to acknowledge receipt of events, even if we don't
    hang around for them to be handled.
  * Always run through try_mounts() at least once.  LP: #537136.

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 31 Mar 2010 11:45:27 +0100

mountall (2.9) lucid; urgency=low

  * debian/control: per Scott, don't use pre-depends anymore, just regular
    depends.  LP: #540091.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 30 Mar 2010 11:58:20 -0700

mountall (2.8) lucid; urgency=low

  * src/mountall.c:
    - Flush the D-Bus connection queue before exiting, otherwise we can
      end up leaving important events like "filesystem" in the memory queue
      without ever sending it on the socket.  LP: #533054.
    - Move the message about disks being checked here from plymouth.
  * configure.ac:
    - Now that it's upstream, there's a proper ply-boot-client.pc file for
      the boot client library we want.
  * src/Makefile.am:
    - Which means we don't need to manually include -lplybootclient (the
      library changed names anyway)
  * debian/control:
    - Bump build-dependency

 -- Scott James Remnant <scott@ubuntu.com>  Fri, 12 Mar 2010 18:22:51 +0000

mountall (2.7) lucid; urgency=low

  * src/mountall.c:
    - Prepend "keys:" to messages which require user interaction in
      plymouth.

 -- Alberto Milone <alberto.milone@canonical.com>  Thu, 04 Mar 2010 16:02:04 +0100

mountall (2.6) lucid; urgency=low

  * debian/control: add versioned-dependency on coreutils to get "cp -n"
    LP: #527829.

 -- Scott James Remnant <scott@ubuntu.com>  Fri, 26 Feb 2010 16:16:24 +0000

mountall (2.5) lucid; urgency=low

  * conf/mounted-dev.conf:
    - Go back to copying from /lib/udev/devices, this is much faster for